Update Asmt1 Prob2 : Update Makefile

--- a/Assignment1/Problem2/Makefile
+++ b/Assignment1/Problem2/Makefile
@@ -1,13 +1,26 @@
 CC = g++
 CXXFLAGS = -Wall -O2
-OBJ = main.o
 
-main.o: main.cpp File.h ManageData.h Student.h VerifyData.h
-	$(CC) $(CXXFLAGS) -c main.cpp
+OBJ_DIR = ./obj
+SRC_DIR = ./src
+OUT_DIR = ./out
 
-StudentManage: $(OBJ)
-	$(CC) $(CXXFLAGS) $(OBJ) -o StudentManage
+INCLUDE = -Iinclude/
+TARGET = StudentManage
+
+SRCS = $(notdir $(wildcard $(SRC_DIR)/*.cpp))
+OBJS = $(patsubst %.o,$(OBJ_DIR)/%.o,$(SRCS:.cpp=.o))
+
+all: $(TARGET)
+
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
+	mkdir ./obj 2> /dev/null || true
+	mkdir ./out 2> /dev/null || true
+	$(CC) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
+
+$(TARGET): $(OBJS)
+	$(CC) $(CXXFLAGS) $(OBJS) -o $(OUT_DIR)/$(TARGET)
 
 .PHONY: clean
 clean:
-	rm -f $(OBJ) StudentManage
+	rm -rf $(OBJ_DIR) $(OUT_DIR)
